# wsp3dovm

./: .gitignore  CMakeLists.txt  README.md
build_cuboid/: CMakeLists.txt  main.cpp
wsp3dovm/: CMakeLists.txt  common.h  main.cpp  read_tet.cpp  read_tet.h  wasm.cpp  wasm.h  write_vtk.cpp  write_vtk.h
